use our self-hosted runner infrastructure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,8 +99,8 @@ jobs:
       contents: write  # shogo82148/actions-upload-release-asset
     name: Release build [${{ matrix.platform }}]
     if: github.repository == 'jens-maus/thinRoot'
-    runs-on: ubuntu-22.04
-    timeout-minutes: 480
+    runs-on: self-hosted
+    timeout-minutes: 300
     needs: release_draft
     outputs:
       build_datetime: ${{ steps.env.outputs.build_datetime }}
@@ -116,10 +116,14 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          if ! dpkg-query -l wget bc cpio rsync zip python >/dev/null 2>&1; then
+          if ! dpkg-query -l wget bc cpio rsync zip python3 file >/dev/null 2>&1; then
             apt update
-            apt install -y --no-install-recommends wget bc cpio rsync zip python
+            apt install -y --no-install-recommends wget bc cpio rsync zip python3 file
           fi
+          if ! getent group | grep -q ^builder:; then groupadd -g 48 builder; fi
+          if ! getent passwd | grep -q ^builder:; then useradd -m -u 1003 -g 48 -G sudo builder; fi
+          if ! grep -q ^builder; then echo "builder ALL=(ALL:ALL) NOPASSWD: ALL" >>/etc/sudoers; fi
+          chown -R builder:builder /home/builder
 
       - name: Setup Environment
         id: env
@@ -148,15 +152,16 @@ jobs:
 
       # major build step
       - name: Build
-        timeout-minutes: 480
+        timeout-minutes: 300
         run: |
-          make distclean
-          make DATE=${{ needs.release_draft.outputs.date }} BR2_JLEVEL=${{ env.JLEVEL }} ${{ matrix.platform }}-release
+          rm -rf release/thinroot-* buildroot-????.*
+          sudo -H -E -u builder nice -n 19 make DATE=${{ needs.release_draft.outputs.date }} BR2_DL_DIR=/mnt/download BR2_CCACHE_DIR=/mnt/ccache/${{ matrix.platform }} BR2_JLEVEL=${{ env.JLEVEL }} clean-all ${{ matrix.platform }}-release
 
       # cleanup
       - name: Cleanup
         run: |
-          make distclean
+          make clean-all
+          rm -rf release/thinroot-* buildroot-????.*
 
       #######################
       # release uploads
