--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -33,9 +33,9 @@ jobs:
       contents: write  # actions/upload-artifact
     name: Snapshot build [${{ matrix.platform }}]
     if: ${{ github.repository == 'jens-maus/thinRoot' && (github.event_name != 'schedule' || needs.repo-check.outputs.has-commits > 0) }}
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     needs: repo-check
-    timeout-minutes: 480
+    timeout-minutes: 300
     outputs:
       build_datetime: ${{ steps.env.outputs.build_datetime }}
       build_version: ${{ steps.env.outputs.build_version }}
@@ -51,10 +51,14 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          if ! dpkg-query -l wget bc cpio rsync zip python >/dev/null 2>&1; then
+          if ! dpkg-query -l wget bc cpio rsync zip python3 file >/dev/null 2>&1; then
             apt update
-            apt install -y --no-install-recommends wget bc cpio rsync zip python
+            apt install -y --no-install-recommends wget bc cpio rsync zip python3 file
           fi
+          if ! getent group | grep -q ^builder:; then groupadd -g 48 builder; fi
+          if ! getent passwd | grep -q ^builder:; then useradd -m -u 1003 -g 48 -G sudo builder; fi
+          if ! grep -q ^builder; then echo "builder ALL=(ALL:ALL) NOPASSWD: ALL" >>/etc/sudoers; fi
+          chown -R builder:builder /home/builder
 
       - name: Setup Environment
         id: env
@@ -87,16 +91,17 @@ jobs:
 
       # major build step
       - name: Build
-        timeout-minutes: 480
+        timeout-minutes: 300
         shell: bash
         run: |
-          make distclean
-          make DATE=${{ env.DATE }} BR2_JLEVEL=${{ env.JLEVEL }} ${{ matrix.platform }}-release
+          rm -rf release/thinroot-* buildroot-????.*
+          sudo -H -E -u builder nice -n 19 make DATE=${{ env.DATE }} BR2_DL_DIR=/mnt/download BR2_CCACHE_DIR=/mnt/ccache/${{ matrix.platform }} BR2_JLEVEL=${{ env.JLEVEL }} clean-all ${{ matrix.platform }}-release
 
       # cleanup
       - name: Cleanup
         run: |
-          make distclean
+          make clean-all
+          rm -rf release/*.img* buildroot-????.*
 
       ########################
       # upload build artifacts
