add bunch of kconfig fixes according to check-dotconfig

--- a/buildroot-external/kernel/6.6/device-support.config
+++ b/buildroot-external/kernel/6.6/device-support.config
@@ -84,9 +84,8 @@ CONFIG_RT2800USB_UNKNOWN=y
 # CONFIG_MEDIA_SUPPORT is not set
 # CONFIG_MEDIA_TUNER is not set
 
-# disable GPIO support
-# CONFIG_GPIOLIB is not set
-# CONFIG_GPIO_SYSFS is not set
+# enable GPIO support
+CONFIG_GPIOLIB=y
 
 # Staging quality drivers
 CONFIG_STAGING=y
