--- a/buildroot-external/kernel/6.6/global.config
+++ b/buildroot-external/kernel/6.6/global.config
@@ -10,10 +10,6 @@ CONFIG_EXPERT=y
 # enable hardware random number generators
 CONFIG_HW_RANDOM=y
 
-# disable kernel rtc handling 
-# CONFIG_RTC_HCTOSYS is not set
-# CONFIG_RTC_SYSTOHC is not set
-
 # disable autofs support
 # CONFIG_AUTOFS_FS is not set
 
@@ -75,7 +71,7 @@ CONFIG_SND_HDA_COMPONENT=y
 CONFIG_SND_HDA_EXT_CORE=m
 CONFIG_SND_HDA_PREALLOC_SIZE=0
 CONFIG_SND_USB=y
-CONFIG_SND_USB_AUDIO=y
+CONFIG_SND_USB_AUDIO=m
 
 # disable speakup support
 # CONFIG_SPEAKUP is not set
@@ -92,9 +88,6 @@ CONFIG_SND_USB_AUDIO=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 # CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
-
-# enable console sleep
-CONFIG_VT_CONSOLE_SLEEP=y
 
 # disable dedicated backlight support
 # CONFIG_BACKLIGHT_GPIO is not set
@@ -147,8 +140,9 @@ CONFIG_LRU_GEN_ENABLED=y
 
 # enable ondemand frequency scaling
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 
 # filesystem support settings
 CONFIG_MISC_FILESYSTEMS=y
@@ -187,12 +181,8 @@ CONFIG_MSDOS_PARTITION=y
 # enable ata support
 CONFIG_ATA=y
 
-# enable raid/lvm support
-CONFIG_MD=y
-CONFIG_BLK_DEV_DM=y
-CONFIG_BLK_DEV_LOOP=y
-CONFIG_DM_VERITY=y
-# CONFIG_BLK_DEV_BSGLIB is not set
+# disable raid/lvm support
+# CONFIG_MD is not set
 
 # audit support
 CONFIG_AUDIT=y
@@ -222,7 +212,7 @@ CONFIG_BT_LEDS=y
 # enabke ipv6 support
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IPV6_SIT=m
+# CONFIG_IPV6_SIT is not set
 
 # enable IP multicast routing
 CONFIG_IP_MROUTE=y
@@ -313,8 +303,8 @@ CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 CONFIG_ACPI_APEI=y
 CONFIG_ACPI_APEI_GHES=y
 
-# disable CGROUP (not needed by thinclient)
-# CONFIG_CGROUP is not set
+# disable CGROUPS (not needed by thinclient)
+# CONFIG_CGROUPS is not set
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_RDMA is not set
@@ -337,7 +327,6 @@ CONFIG_ACPI_APEI_GHES=y
 # CONFIG_MEDIA_CEC_SUPPORT is not set
 # CONFIG_HYPERVISOR_GUEST is not set
 # CONFIG_HIBERNATION is not set
-# CONFIG_BACKLIGHT_CLASS_DEVICE is not set
 
 # disable virtio support
 # CONFIG_VIRTIO_MENU is not set
