--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -96,6 +96,10 @@ jobs:
         run: |
           rm -rf release/thinroot-* buildroot-????.*
           sudo -H -E -u builder nice -n 19 make DATE=${{ env.DATE }} BR2_DL_DIR=/mnt/download BR2_CCACHE_DIR=/mnt/ccache/${{ matrix.platform }} BR2_JLEVEL=${{ env.JLEVEL }} clean-all ${{ matrix.platform }}-release
+      # check linux kernel config consistency
+      - name: Check Linux Kconfig
+        run: |
+          sudo -H -E -u builder nice -n 19 make DATE=${{ env.DATE }} BR2_DL_DIR=/mnt/download BR2_CCACHE_DIR=/mnt/ccache/${{ matrix.platform }} BR2_JLEVEL=${{ env.JLEVEL }} PRODUCT=${{ matrix.platform }} linux-check-dotconfig
 
       ########################
       # upload build artifacts
