enable MPTCP support

--- a/buildroot-external/kernel/6.1/global.config
+++ b/buildroot-external/kernel/6.1/global.config
@@ -194,6 +194,10 @@ CONFIG_IPV6_SIT=m
 CONFIG_IP_MROUTE=y
 CONFIG_IPV6_MROUTE=y
 
+# enable mptcp support
+CONFIG_MPTCP=y
+CONFIG_MPTCP_IPV6=y
+
 # disable network bridge support
 # CONFIG_BRIDGE is not set
 
