--- a/buildroot-external/kernel/6.6/global.config
+++ b/buildroot-external/kernel/6.6/global.config
@@ -218,6 +218,10 @@ CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IP_MROUTE=y
 CONFIG_IPV6_MROUTE=y
 
+# enable mptcp support
+CONFIG_MPTCP=y
+CONFIG_MPTCP_IPV6=y
+
 # disable network bridge support
 # CONFIG_BRIDGE is not set
 
