--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -10,11 +10,13 @@ BR2_TARGET_GENERIC_HOSTNAME="thinroot"
 BR2_TARGET_GENERIC_ISSUE="Welcome to thinRoot"
 BR2_TARGET_GENERIC_PASSWD_SHA512=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
+BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_GETTY_PORT="tty2"
 BR2_ENABLE_LOCALE_WHITELIST="C en_US de_DE"
 BR2_GENERATE_LOCALE="en_US de_DE"
 BR2_SYSTEM_ENABLE_NLS=y
+BR2_TARGET_TZ_INFO=y
 BR2_TARGET_LOCALTIME="Europe/Berlin"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_THINROOT_PATH)/rootfs-overlay"
 BR2_LINUX_KERNEL=y
@@ -40,7 +42,6 @@ BR2_PACKAGE_F2FS_TOOLS=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_LIBERATION=y
-BR2_PACKAGE_MESA3D_DEMOS=y
 BR2_PACKAGE_FREERDP=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_LLVM=y
@@ -62,6 +63,7 @@ BR2_PACKAGE_XAPP_XPROP=y
 BR2_PACKAGE_XAPP_XRANDR=y
 BR2_PACKAGE_XAPP_XSETROOT=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
+BR2_PACKAGE_XDRIVER_XF86_INPUT_KEYBOARD=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_MOUSE=y
 BR2_PACKAGE_XFONT_FONT_MISC_CYRILLIC=y
 BR2_PACKAGE_NODM=y
@@ -84,6 +86,8 @@ BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_WGET=y
 BR2_PACKAGE_IRQBALANCE=y
 BR2_PACKAGE_TAR=y
+BR2_PACKAGE_UTIL_LINUX_RFKILL=y
+BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_LZ4=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
