--- a/buildroot-external/package/qutselect/Config.in
+++ b/buildroot-external/package/qutselect/Config.in
@@ -1,13 +1,15 @@
 config BR2_PACKAGE_QUTSELECT
 	bool "qutselect"
-	select BR2_PACKAGE_QT5
-	select BR2_PACKAGE_QT5BASE
-	select BR2_PACKAGE_QT5BASE_GUI
-	select BR2_PACKAGE_QT5BASE_XCB
-	select BR2_PACKAGE_QT5X11EXTRAS
-	select BR2_PACKAGE_QT5BASE_FONTCONFIG
-	select BR2_PACKAGE_QT5BASE_PNG
+	select BR2_PACKAGE_QT6
+	select BR2_PACKAGE_QT6BASE
+	select BR2_PACKAGE_QT6BASE_GUI
+	select BR2_PACKAGE_QT6BASE_XCB
+	select BR2_PACKAGE_QT6X11EXTRAS
+	select BR2_PACKAGE_QT6BASE_FONTCONFIG
+	select BR2_PACKAGE_QT6BASE_PNG
+	select BR2_PACKAGE_QT6BASE_WIDGETS
+	select BR2_PACKAGE_QT6BASE_NETWORK
 	help
-	  A Qt5-based (unix) terminal server selection tool
+	  A Qt-based (unix) terminal server selection tool
 
 	  https://github.com/hzdr/qutselect
