--- a/buildroot-external/configs/generic-x86_64.config
+++ b/buildroot-external/configs/generic-x86_64.config
@@ -2,14 +2,14 @@ BR2_x86_64=y
 BR2_x86_corei7=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_6_6=y
 # BR2_TARGET_ENABLE_ROOT_LOGIN is not set
-BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_THINROOT_PATH}/board/intelnuc/users_table.txt"
-BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/post-build.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc"
+BR2_ROOTFS_USERS_TABLES="${BR2_EXTERNAL_THINROOT_PATH}/board/generic-x86_64/users_table.txt"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/generic-x86_64/post-build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_THINROOT_PATH)/board/generic-x86_64/post-image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="$(BR2_EXTERNAL_THINROOT_PATH)/board/generic-x86_64"
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="6.6.25"
 BR2_LINUX_KERNEL_DEFCONFIG="x86_64"
-BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/global.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/device-support.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/device-support-pci.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/security-x86_64.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/security.config $(BR2_EXTERNAL_THINROOT_PATH)/board/intelnuc/kernel.config"
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/global.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/device-support.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/device-support-pci.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/security-x86_64.config $(BR2_EXTERNAL_THINROOT_PATH)/kernel/6.6/security.config $(BR2_EXTERNAL_THINROOT_PATH)/board/generic-x86_64/kernel.config"
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_CROCUS=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_I915=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_IRIS=y
