add basic virt-viewer/remote-viewer SPICE connection protocol support.

--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -44,6 +44,7 @@ BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_LIBERATION=y
 BR2_PACKAGE_FREERDP=y
+BR2_PACKAGE_VIRT_VIEWER=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_LLVM=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST=y
