add missing usbredir and lz4 package support for spice-gtk

--- a/buildroot-external/package/spice-gtk/Config.in
+++ b/buildroot-external/package/spice-gtk/Config.in
@@ -8,6 +8,9 @@ config BR2_PACKAGE_SPICE_GTK
 	select BR2_PACKAGE_JSON_GLIB
 	select BR2_PACKAGE_GSTREAMER1
 	select BR2_PACKAGE_GST1_PLUGINS_BASE
+	select BR2_PACKAGE_LIBUSB
+	select BR2_PACKAGE_USBREDIR
+	select BR2_PACKAGE_LZ4
 	help
 	  SPICE Client library using GLib and GTK+
 
