add own phodav package and enable libopus as additional dependency for spice-gtk to get webdav and audio support going with remote-viewer.

--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -10,6 +10,7 @@ menu "Additional software"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/remmina/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/virt-viewer/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/spice-gtk/Config.in"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/phodav/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/rpi-eeprom/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/qt-webengine-kiosk/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/qt-kiosk-browser/Config.in"
