--- a/buildroot-external/package/phodav/Config.in
+++ b/buildroot-external/package/phodav/Config.in
@@ -2,6 +2,7 @@ config BR2_PACKAGE_PHODAV
 	bool "phodav"
 	select BR2_PACKAGE_LIBSOUP3
 	help
-	  minimal WebDAV server implementation using GNOME libsoup (RFC 4918)
+	  minimal WebDAV server implementation using
+	  GNOME libsoup (RFC 4918)
 
 	  https://gitlab.gnome.org/GNOME/phodav
