--- a/buildroot-external/package/spice-gtk/Config.in
+++ b/buildroot-external/package/spice-gtk/Config.in
@@ -8,6 +8,11 @@ config BR2_PACKAGE_SPICE_GTK
 	select BR2_PACKAGE_JSON_GLIB
 	select BR2_PACKAGE_GSTREAMER1
 	select BR2_PACKAGE_GST1_PLUGINS_BASE
+	select BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OPUS
+	select BR2_PACKAGE_GST1_PLUGINS_GOOD
+	select BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_PULSE
+	select BR2_PACKAGE_GST1_PLUGINS_BAD
+	select BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPUS
 	select BR2_PACKAGE_LIBUSB
 	select BR2_PACKAGE_USBREDIR
 	select BR2_PACKAGE_USBUTILS
