--- a/buildroot-external/package/spice-gtk/Config.in
+++ b/buildroot-external/package/spice-gtk/Config.in
@@ -12,6 +12,7 @@ config BR2_PACKAGE_SPICE_GTK
 	select BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_APP
 	select BR2_PACKAGE_GST1_PLUGINS_GOOD
 	select BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_PULSE
+	select BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT
 	select BR2_PACKAGE_GST1_PLUGINS_BAD
 	select BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPUS
 	select BR2_PACKAGE_LIBUSB
