add missing BR2_PACKAGE_DBUS_GLIB (dbus-glib)

--- a/buildroot-external/package/spice-gtk/Config.in
+++ b/buildroot-external/package/spice-gtk/Config.in
@@ -15,6 +15,7 @@ config BR2_PACKAGE_SPICE_GTK
 	select BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT
 	select BR2_PACKAGE_GST1_PLUGINS_BAD
 	select BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_OPUS
+	select BR2_PACKAGE_DBUS_GLIB
 	select BR2_PACKAGE_LIBUSB
 	select BR2_PACKAGE_USBREDIR
 	select BR2_PACKAGE_USBUTILS
