replace legacy option BR2_PACKAGE_CAIRO_PDF with BR2_PACKAGE_CAIRO_ZLIB

--- a/buildroot-external/package/remmina/Config.in
+++ b/buildroot-external/package/remmina/Config.in
@@ -1,6 +1,6 @@
 config BR2_PACKAGE_REMMINA
 	bool "remmina"
-	select BR2_PACKAGE_CAIRO_PDF
+	select BR2_PACKAGE_CAIRO_ZLIB
 #	select BR2_PACKAGE_AVAHI
 	select BR2_PACKAGE_LIBGTK3
 	select BR2_PACKAGE_LIBVNCSERVER
