--- a/buildroot-external/package/virt-viewer/Config.in
+++ b/buildroot-external/package/virt-viewer/Config.in
@@ -1,6 +1,6 @@
 config BR2_PACKAGE_VIRT_VIEWER
 	bool "virt-viewer"
-	select BR2_PACKAGE_CAIRO_PDF
+	select BR2_PACKAGE_CAIRO_ZLIB
 	select BR2_PACKAGE_LIBGTK3
 	select BR2_PACKAGE_SPICE_GTK
 	help
