add BR2_PACKAGE_XCB_UTIL_CURSOR to get qt6 compiled again with xcb support

--- a/buildroot-external/package/qutselect/Config.in
+++ b/buildroot-external/package/qutselect/Config.in
@@ -12,6 +12,7 @@ config BR2_PACKAGE_QUTSELECT
 	select BR2_PACKAGE_JQ
 	select BR2_PACKAGE_LIBCURL
 	select BR2_PACKAGE_LIBCURL_CURL
+	select BR2_PACKAGE_XCB_UTIL_CURSOR
 	help
 	  A Qt-based (unix) terminal server selection tool
 
