--- a/buildroot-external/configs/generic-x86_64.config
+++ b/buildroot-external/configs/generic-x86_64.config
@@ -31,4 +31,5 @@ BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_OBEX=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
+BR2_PACKAGE_LIBKRB5=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
