--- a/buildroot-external/configs/generic-x86_64.config
+++ b/buildroot-external/configs/generic-x86_64.config
@@ -33,4 +33,6 @@ BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 BR2_PACKAGE_LIBKRB5=y
 BR2_PACKAGE_YAD=y
+BR2_PACKAGE_LIBNSS=y
+BR2_PACKAGE_CUPS=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
