add x264 and x265 support to ffmpeg to ensure cameras stream can be properly transcoded into h264/h265 (e.g. within xfreerdp). Also disabled the wayland freeprdp client sind it is not required for our application.

--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -33,6 +33,9 @@ BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_FFMPEG=y
 # BR2_PACKAGE_FFMPEG_FFMPEG is not set
 BR2_PACKAGE_FFMPEG_XCBGRAB=y
+BR2_PACKAGE_FFMPEG_GPL=y
+BR2_PACKAGE_X264=y
+BR2_PACKAGE_X265=y
 BR2_PACKAGE_PULSEAUDIO=y
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FATLABEL=y
@@ -44,6 +47,7 @@ BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_LIBERATION=y
 BR2_PACKAGE_FREERDP=y
+# BR2_PACKAGE_FREERDP_CLIENT_WL is not set
 BR2_PACKAGE_VIRT_VIEWER=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_LLVM=y
