--- a/buildroot-external/configs/generic-x86_64.config
+++ b/buildroot-external/configs/generic-x86_64.config
@@ -35,4 +35,5 @@ BR2_PACKAGE_LIBKRB5=y
 BR2_PACKAGE_YAD=y
 BR2_PACKAGE_LIBNSS=y
 BR2_PACKAGE_CUPS=y
+BR2_PACKAGE_LIBV4L_UTILS=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
