add BR2_PACKAGE_XDRIVER_XF86_INPUT_SYNAPTICS to support certain touchpads.

--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -67,6 +67,7 @@ BR2_PACKAGE_XAPP_XSETROOT=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_KEYBOARD=y
 BR2_PACKAGE_XDRIVER_XF86_INPUT_MOUSE=y
+BR2_PACKAGE_XDRIVER_XF86_INPUT_SYNAPTICS=y
 BR2_PACKAGE_XFONT_FONT_MISC_CYRILLIC=y
 BR2_PACKAGE_NODM=y
 BR2_PACKAGE_XDOTOOL=y
