enable CONFIG_INPUT_MOUSEDEV and CONFIG_MOUSE_SYNAPTICS_USB to enable synaptics touchpad support.

--- a/buildroot-external/kernel/6.6/global.config
+++ b/buildroot-external/kernel/6.6/global.config
@@ -13,12 +13,15 @@ CONFIG_HW_RANDOM=y
 # disable autofs support
 # CONFIG_AUTOFS_FS is not set
 
-# disable joystick/touchscreen/mouse/remote controller support
+# disable joystick/touchscreen/remote controller support
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TOUCHSCREEN is not set
-# CONFIG_INPUT_MOUSEDEV is not set
 # CONFIG_INPUT_TABLET is not set
 # CONFIG_RC_CORE is not set
+
+# enable input MOUSEDEV to allow touchpads to work in X
+CONFIG_INPUT_MOUSEDEV=y
+CONFIG_MOUSE_SYNAPTICS_USB=y
 
 # disable CAN support
 # CONFIG_CAN is not set
