--- a/buildroot-external/kernel/6.6/global.config
+++ b/buildroot-external/kernel/6.6/global.config
@@ -37,21 +37,13 @@ CONFIG_MOUSE_PS2_ELANTECH_SMBUS=y
 CONFIG_MOUSE_PS2_SENTELIC=y
 CONFIG_MOUSE_PS2_TOUCHKIT=y
 CONFIG_MOUSE_PS2_FOCALTECH=y
-CONFIG_MOUSE_PS2_VMMOUSE=y
 CONFIG_MOUSE_PS2_SMBUS=y
 CONFIG_MOUSE_SERIAL=m
-CONFIG_MOUSE_APPLETOUCH=m
-CONFIG_MOUSE_BCM5974=m
-CONFIG_MOUSE_CYAPA=m
 CONFIG_MOUSE_ELAN_I2C=m
 CONFIG_MOUSE_ELAN_I2C_I2C=y
 CONFIG_MOUSE_ELAN_I2C_SMBUS=y
-CONFIG_MOUSE_VSXXXAA=m
-CONFIG_MOUSE_GPIO=m
 CONFIG_MOUSE_SYNAPTICS_I2C=m
 CONFIG_MOUSE_SYNAPTICS_USB=m
-CONFIG_HID_RMI=m
-CONFIG_HID_MULTITOUCH=m
 
 # disable CAN support
 # CONFIG_CAN is not set
@@ -297,6 +289,10 @@ CONFIG_CFG80211_WEXT=y
 
 # human interface devices support
 CONFIG_HID=y
+CONFIG_HID_RMI=m
+CONFIG_HID_MULTITOUCH=m
+CONFIG_HID_ALPS=m
+CONFIG_HID_LENOVO=m
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
 
