update main upstream kernel from 6.6.x to 6.12.x (6.12.9) and adapted all kernel configs and buildroot dependencies accordingly.

--- a/buildroot-external/kernel/6.6/global.config
+++ b/buildroot-external/kernel/6.6/global.config
@@ -131,8 +131,8 @@ CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 # disable samba server kernel support
 # CONFIG_SMB_SERVER is not set
 
-# disable media controller (camera) support
-# CONFIG_MEDIA_CONTROLLER is not set
+# enable media controller (camera) support
+CONFIG_MEDIA_CONTROLLER=y
 
 # disable all runtime testing menu items
 # CONFIG_RUNTIME_TESTING_MENU is not set
