first changes to get rpi3 image compiled again with latest uboot and buildroot environment.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,7 +108,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [generic-x86_64]
+        platform: [generic-x86_64, rpi3]
 
     steps:
       - name: Checkout Code
@@ -159,18 +159,50 @@ jobs:
 
       #######################
       # release uploads
-      - name: Upload release snapshot [generic-x86_64]
+      - name: Upload release image [generic-x86_64, rpi3]
         uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ needs.release_draft.outputs.upload_url }}
           asset_path: release/thinroot-${{ needs.release_draft.outputs.version }}-${{ matrix.platform }}.img
           asset_content_type: application/octet-stream
 
-      - name: Upload build release checksum [generic-x86_64]
+      - name: Upload release image checksum [generic-x86_64, rpi3]
         uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ needs.release_draft.outputs.upload_url }}
           asset_path: release/thinroot-${{ needs.release_draft.outputs.version }}-${{ matrix.platform }}.img.sha256
+          asset_content_type: text/plain
+
+      - name: Upload release sdcard image [rpi3]
+        if: matrix.platform == 'rpi3'
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.release_draft.outputs.upload_url }}
+          asset_path: release/thinroot-${{ needs.release_draft.outputs.version }}-${{ matrix.platform }}-sdcard.img
+          asset_content_type: application/octet-stream
+
+      - name: Upload release sdcard image checksum [rpi3]
+        if: matrix.platform == 'rpi3'
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.release_draft.outputs.upload_url }}
+          asset_path: release/thinroot-${{ needs.release_draft.outputs.version }}-${{ matrix.platform }}-sdcard.img.sha256
+          asset_content_type: text/plain
+
+      - name: Upload release kernel image [rpi3]
+        if: matrix.platform == 'rpi3'
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.release_draft.outputs.upload_url }}
+          asset_path: release/thinroot-${{ needs.release_draft.outputs.version }}-${{ matrix.platform }}-kernel.img
+          asset_content_type: application/octet-stream
+
+      - name: Upload release kernel image checksum [rpi3]
+        if: matrix.platform == 'rpi3'
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ needs.release_draft.outputs.upload_url }}
+          asset_path: release/thinroot-${{ needs.release_draft.outputs.version }}-${{ matrix.platform }}-kernel.img.sha256
           asset_content_type: text/plain
 
       #######################
