--- a/buildroot-external/Config.in
+++ b/buildroot-external/Config.in
@@ -14,4 +14,5 @@ menu "Additional software"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/rpi-eeprom/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/qt-webengine-kiosk/Config.in"
   source "$BR2_EXTERNAL_THINROOT_PATH/package/qt-kiosk-browser/Config.in"
+  source "$BR2_EXTERNAL_THINROOT_PATH/package/multilib32/Config.in"
 endmenu
