--- a/buildroot-external/board/rpi3/genimage.cfg
+++ b/buildroot-external/board/rpi3/genimage.cfg
@@ -4,22 +4,19 @@ image boot.vfat {
 
     files = {
       "VERSION",
-      "bcm2710-rpi-3-b-plus.dtb",
-      "bcm2837-rpi-3-b-plus.dtb",
       "bcm2710-rpi-3-b.dtb",
-      "bcm2837-rpi-3-b.dtb",
+      "bcm2710-rpi-3-b-plus.dtb",
       "bcm2710-rpi-2-b.dtb",
       "bcm2710-rpi-cm3.dtb",
-      "bcm2837-rpi-3-a-plus.dtb",
-      "bcm2837-rpi-cm3-io3.dtb",
       "bcm2710-rpi-zero-2.dtb",
+      "bcm2710-rpi-zero-2-w.dtb",
       "cmdline.txt",
       "config.txt",
       "bootEnv.txt",
       "rpi-firmware/bootcode.bin",
       "rpi-firmware/fixup.dat",
       "rpi-firmware/start.elf",
-      "rpi-firmware/overlays",
+      "overlays",
       "u-boot.bin",
       "boot.scr"
     }
