add xz package to get kmod xz support and also add kernel module uncompress directly in the kernel.

--- a/buildroot-external/kernel/6.12/security.config
+++ b/buildroot-external/kernel/6.12/security.config
@@ -13,6 +13,7 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODULE_COMPRESS=y
 CONFIG_MODULE_COMPRESS_ALL=y
 CONFIG_MODULE_COMPRESS_XZ=y
+CONFIG_MODULE_DECOMPRESS=y
 
 # Make sure kernel page tables have safe permissions.
 CONFIG_STRICT_KERNEL_RWX=y
