add GLIBC_UTILS for ldconfig and add ldconfig call to inittab so that the cache file will be updated accordingly.

--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -36,6 +36,7 @@ BR2_PACKAGE_FFMPEG=y
 # BR2_PACKAGE_FFMPEG_FFMPEG is not set
 BR2_PACKAGE_FFMPEG_XCBGRAB=y
 BR2_PACKAGE_FFMPEG_GPL=y
+BR2_PACKAGE_GLIBC_UTILS=y
 BR2_PACKAGE_X264=y
 BR2_PACKAGE_X265=y
 BR2_PACKAGE_PULSEAUDIO=y
