add pcsclite library and adapt multilib32 default packages to get the thinlinc linked for 32bit targets.

--- a/buildroot-external/package/multilib32/external/Buildroot.config
+++ b/buildroot-external/package/multilib32/external/Buildroot.config
@@ -18,6 +18,10 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 #BR2_PACKAGE_LIBUV=y
 #BR2_PACKAGE_LIBXMLPARSER=y
 #BR2_PACKAGE_LIBXMLRPCXX=y
-BR2_PACKAGE_OPENSSL=y
 #BR2_PACKAGE_PCRE=y
 #BR2_PACKAGE_READLINE=y
+BR2_PACKAGE_OPENSSL=y
+BR2_PACKAGE_PCSC_LITE=y
+BR2_PACKAGE_PULSEAUDIO=y
+BR2_PACKAGE_XORG7=y
+BR2_PACKAGE_XLIB_LIBX11=y
