--- a/buildroot-external/package/yoe-kiosk-browser/Config.in
+++ b/buildroot-external/package/yoe-kiosk-browser/Config.in
@@ -1,6 +1,11 @@
 config BR2_PACKAGE_YOE_KIOSK_BROWSER
 	bool "yoe-kiosk-browser"
+	select BR2_PACKAGE_HOST_QT6TOOLS
 	select BR2_PACKAGE_QT6WEBENGINE
 	select BR2_PACKAGE_QT6MULTIMEDIA
+	select BR2_PACKAGE_QT6DECLARATIVE
+	select BR2_PACKAGE_QT6DECLARATIVE_QUICK
+	select BR2_PACKAGE_QT6SHADERTOOLS
+	select BR2_PACKAGE_QT6VIRTUALKEYBOARD
 	help
 	  Simple Qt Webengine browser
