set rpi-firmware to 4649b6d52005b52b1d23f553b5e466941bc862dc (stable_20240124)

--- a/buildroot-external/configs/rpi4.config
+++ b/buildroot-external/configs/rpi4.config
@@ -97,7 +97,7 @@ BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_BT=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_WIFI=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE=y
-BR2_PACKAGE_RPI_FIRMWARE_VERSION="1.20220331"
+BR2_PACKAGE_RPI_FIRMWARE_VERSION="4649b6d52005b52b1d23f553b5e466941bc862dc"
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI4=y
 BR2_PACKAGE_ACPID=y
 BR2_PACKAGE_EUDEV_RULES_GEN=y
