downgrade rpi-firmware to 1.20211118 as this seems to be the last version working with our U-Boot network boot environment.

--- a/buildroot-external/configs/rpi3.config
+++ b/buildroot-external/configs/rpi3.config
@@ -25,7 +25,7 @@ BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_BT=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_WIFI=y
 BR2_PACKAGE_RPI_FIRMWARE=y
-BR2_PACKAGE_RPI_FIRMWARE_VERSION="4649b6d52005b52b1d23f553b5e466941bc862dc"
+BR2_PACKAGE_RPI_FIRMWARE_VERSION="1.20211118"
 BR2_PACKAGE_RPI_FIRMWARE_BOOTCODE_BIN=y
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI=y
 BR2_PACKAGE_I2C_TOOLS=y
