fix global locale setting to prefer en_US.UTF-8

--- a/buildroot-external/configs/rpi3.config
+++ b/buildroot-external/configs/rpi3.config
@@ -51,4 +51,6 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS_BOOT_SCRIPT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_BOOT_SCRIPT_SOURCE="$(BR2_EXTERNAL_THINROOT_PATH)/board/rpi3/boot.cmd"
 BR2_PACKAGE_MULTILIB32=y
 BR2_PACKAGE_MULTILIB32_CONFIG_FRAGMENT_FILE="multilib32_arm_a53.config"
+BR2_PACKAGE_QT5=y
+BR2_PACKAGE_QT_WEBKIT_KIOSK=y
 #BR2_PACKAGE_YOE_KIOSK_BROWSER=y
