--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -13,8 +13,9 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_GETTY_PORT="tty2"
-BR2_ENABLE_LOCALE_WHITELIST="C en_US de_DE"
-BR2_GENERATE_LOCALE="en_US de_DE"
+BR2_ENABLE_LOCALE_PURGE=y
+BR2_ENABLE_LOCALE_WHITELIST="C.UTF-8 en_US.UTF-8 de_DE.UTF-8"
+BR2_GENERATE_LOCALE="C.UTF-8 en_US.UTF-8 de_DE.UTF-8"
 BR2_SYSTEM_ENABLE_NLS=y
 BR2_TARGET_TZ_INFO=y
 BR2_TARGET_LOCALTIME="Europe/Berlin"
