move all applications to each individual platform config file and leave only OS relevant stuff in the global Buildroot.config file.

--- a/buildroot-external/configs/generic-x86_64.config
+++ b/buildroot-external/configs/generic-x86_64.config
@@ -37,3 +37,21 @@ BR2_PACKAGE_LIBNSS=y
 BR2_PACKAGE_CUPS=y
 BR2_PACKAGE_LIBV4L_UTILS=y
 BR2_TARGET_ROOTFS_INITRAMFS=y
+
+# select/deselect webkiosk/thinroot applications
+BR2_PACKAGE_QUTSELECT=y
+BR2_PACKAGE_THINLINC=y
+BR2_PACKAGE_FREERDP=y
+# BR2_PACKAGE_FREERDP_CLIENT_WL is not set
+BR2_PACKAGE_VIRT_VIEWER=y
+BR2_PACKAGE_WEBKITGTK=y
+BR2_PACKAGE_WEBKITGTK_HTTPS=y
+BR2_PACKAGE_WEBKITGTK_MULTIMEDIA=y
+BR2_PACKAGE_WEBKITGTK_MINIBROWSER=y
+#BR2_PACKAGE_WPEWEBKIT=y
+#BR2_PACKAGE_WPEWEBKIT_MULTIMEDIA=y
+#BR2_PACKAGE_WPEWEBKIT_MEDIA_STREAM=y
+#BR2_PACKAGE_COG=y
+#BR2_PACKAGE_QT5=y
+#BR2_PACKAGE_QT_WEBKIT_KIOSK=y
+#BR2_PACKAGE_YOE_KIOSK_BROWSER=y
