--- a/buildroot-external/configs/rpi3.config
+++ b/buildroot-external/configs/rpi3.config
@@ -51,6 +51,21 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS_BOOT_SCRIPT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_BOOT_SCRIPT_SOURCE="$(BR2_EXTERNAL_THINROOT_PATH)/board/rpi3/boot.cmd"
 BR2_PACKAGE_MULTILIB32=y
 BR2_PACKAGE_MULTILIB32_CONFIG_FRAGMENT_FILE="multilib32_arm_a53.config"
-BR2_PACKAGE_QT5=y
-BR2_PACKAGE_QT_WEBKIT_KIOSK=y
+
+# select/deselect webkiosk/thinroot applications
+BR2_PACKAGE_QUTSELECT=y
+BR2_PACKAGE_THINLINC=y
+BR2_PACKAGE_FREERDP=y
+# BR2_PACKAGE_FREERDP_CLIENT_WL is not set
+BR2_PACKAGE_VIRT_VIEWER=y
+BR2_PACKAGE_WEBKITGTK=y
+BR2_PACKAGE_WEBKITGTK_HTTPS=y
+BR2_PACKAGE_WEBKITGTK_MULTIMEDIA=y
+BR2_PACKAGE_WEBKITGTK_MINIBROWSER=y
+#BR2_PACKAGE_WPEWEBKIT=y
+#BR2_PACKAGE_WPEWEBKIT_MULTIMEDIA=y
+#BR2_PACKAGE_WPEWEBKIT_MEDIA_STREAM=y
+#BR2_PACKAGE_COG=y
+#BR2_PACKAGE_QT5=y
+#BR2_PACKAGE_QT_WEBKIT_KIOSK=y
 #BR2_PACKAGE_YOE_KIOSK_BROWSER=y
