add DRM and SOUND kernel config options

--- a/buildroot-external/board/rpi3/kernel.config
+++ b/buildroot-external/board/rpi3/kernel.config
@@ -17,3 +17,14 @@ CONFIG_SERIAL_AMBA_PL011=m
 
 # disable backlight support
 # CONFIG_BACKLIGHT_RPI is not set
+
+# enable DRM
+CONFIG_DRM=y
+CONFIG_DRM_V3D=y
+CONFIG_DRM_VC4=y
+# CONFIG_DRM_SIMPLEDRM is not set
+
+# enable SND
+CONFIG_SOUND=y
+CONFIG_SND=y
+CONFIG_SND_SOC=y
