--- a/buildroot-external/configs/rpi3.config
+++ b/buildroot-external/configs/rpi3.config
@@ -58,14 +58,22 @@ BR2_PACKAGE_THINLINC=y
 BR2_PACKAGE_FREERDP=y
 # BR2_PACKAGE_FREERDP_CLIENT_WL is not set
 BR2_PACKAGE_VIRT_VIEWER=y
-BR2_PACKAGE_WEBKITGTK=y
-BR2_PACKAGE_WEBKITGTK_HTTPS=y
-BR2_PACKAGE_WEBKITGTK_MULTIMEDIA=y
-BR2_PACKAGE_WEBKITGTK_MINIBROWSER=y
+#BR2_PACKAGE_WEBKITGTK=y
+#BR2_PACKAGE_WEBKITGTK_HTTPS=y
+#BR2_PACKAGE_WEBKITGTK_MULTIMEDIA=y
+#BR2_PACKAGE_WEBKITGTK_MINIBROWSER=y
 #BR2_PACKAGE_WPEWEBKIT=y
 #BR2_PACKAGE_WPEWEBKIT_MULTIMEDIA=y
 #BR2_PACKAGE_WPEWEBKIT_MEDIA_STREAM=y
 #BR2_PACKAGE_COG=y
-#BR2_PACKAGE_QT5=y
-#BR2_PACKAGE_QT_WEBKIT_KIOSK=y
+BR2_PACKAGE_QT5=y
+BR2_PACKAGE_QT5BASE_OPENGL_ES2=y
+BR2_PACKAGE_QT5BASE_LINUXFB=y
+BR2_PACKAGE_QT5BASE_XCB=y
+BR2_PACKAGE_QT5BASE_EGLFS=y
+BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
+BR2_PACKAGE_QT5BASE_GIF=y
+BR2_PACKAGE_QT5LOCATION=y
+BR2_PACKAGE_QT5MULTIMEDIA=y
+BR2_PACKAGE_QT_WEBKIT_KIOSK=y
 #BR2_PACKAGE_YOE_KIOSK_BROWSER=y
