add missing QT5DECLARATIVE when QT based webkiosk is enabled and also enable webkiosk for x86_64 build per default.

--- a/buildroot-external/configs/rpi3.config
+++ b/buildroot-external/configs/rpi3.config
@@ -75,5 +75,6 @@ BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
 BR2_PACKAGE_QT5BASE_GIF=y
 BR2_PACKAGE_QT5LOCATION=y
 BR2_PACKAGE_QT5MULTIMEDIA=y
+BR2_PACKAGE_QT5DECLARATIVE=Y
 BR2_PACKAGE_QT_WEBKIT_KIOSK=y
 #BR2_PACKAGE_YOE_KIOSK_BROWSER=y
