--- a/buildroot-external/configs/generic-x86_64.config
+++ b/buildroot-external/configs/generic-x86_64.config
@@ -55,3 +55,14 @@ BR2_PACKAGE_WEBKITGTK_MINIBROWSER=y
 #BR2_PACKAGE_QT5=y
 #BR2_PACKAGE_QT_WEBKIT_KIOSK=y
 #BR2_PACKAGE_YOE_KIOSK_BROWSER=y
+BR2_PACKAGE_QT5=y
+BR2_PACKAGE_QT5BASE_OPENGL_ES2=y
+BR2_PACKAGE_QT5BASE_LINUXFB=y
+BR2_PACKAGE_QT5BASE_XCB=y
+BR2_PACKAGE_QT5BASE_EGLFS=y
+BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
+BR2_PACKAGE_QT5BASE_GIF=y
+BR2_PACKAGE_QT5LOCATION=y
+BR2_PACKAGE_QT5MULTIMEDIA=y
+BR2_PACKAGE_QT5DECLARATIVE=y
+BR2_PACKAGE_QT_WEBKIT_KIOSK=y
