enable DRM kernel config options

--- a/buildroot-external/kernel/6.12/global.config
+++ b/buildroot-external/kernel/6.12/global.config
@@ -119,8 +119,10 @@ CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 # CONFIG_BACKLIGHT_LM3630A is not set
 # CONFIG_BACKLIGHT_PWM is not set
 
-# disable direct rendering manager support
-# CONFIG_DRM is not set
+# enable general direct rendering manager support
+CONFIG_DRM=y
+CONFIG_DRM_FBDEV_EMULATION=y
+# CONFIG_DRM_SIMPLEDRM is not set
 
 # disable DVB hardware support
 # CONFIG_DVB_CORE is not set
