--- a/buildroot-external/configs/rpi3.config
+++ b/buildroot-external/configs/rpi3.config
@@ -19,6 +19,7 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="broadcom/bcm2710-rpi-3-b broadcom/bcm2710-rpi-
 BR2_LINUX_KERNEL_INSTALL_INTREE_OVERLAYS=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_V3D=y
+BR2_PACKAGE_LIBDRM_VC4=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBDEV=y
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBTURBO=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI=y
@@ -58,23 +59,23 @@ BR2_PACKAGE_THINLINC=y
 BR2_PACKAGE_FREERDP=y
 # BR2_PACKAGE_FREERDP_CLIENT_WL is not set
 BR2_PACKAGE_VIRT_VIEWER=y
-#BR2_PACKAGE_WEBKITGTK=y
-#BR2_PACKAGE_WEBKITGTK_HTTPS=y
-#BR2_PACKAGE_WEBKITGTK_MULTIMEDIA=y
-#BR2_PACKAGE_WEBKITGTK_MINIBROWSER=y
+BR2_PACKAGE_WEBKITGTK=y
+BR2_PACKAGE_WEBKITGTK_HTTPS=y
+BR2_PACKAGE_WEBKITGTK_MULTIMEDIA=y
+BR2_PACKAGE_WEBKITGTK_MINIBROWSER=y
 #BR2_PACKAGE_WPEWEBKIT=y
 #BR2_PACKAGE_WPEWEBKIT_MULTIMEDIA=y
 #BR2_PACKAGE_WPEWEBKIT_MEDIA_STREAM=y
 #BR2_PACKAGE_COG=y
-BR2_PACKAGE_QT5=y
-BR2_PACKAGE_QT5BASE_OPENGL_ES2=y
-BR2_PACKAGE_QT5BASE_LINUXFB=y
-BR2_PACKAGE_QT5BASE_XCB=y
-BR2_PACKAGE_QT5BASE_EGLFS=y
-BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
-BR2_PACKAGE_QT5BASE_GIF=y
-BR2_PACKAGE_QT5LOCATION=y
-BR2_PACKAGE_QT5MULTIMEDIA=y
-BR2_PACKAGE_QT5DECLARATIVE=y
-BR2_PACKAGE_QT_WEBKIT_KIOSK=y
 #BR2_PACKAGE_YOE_KIOSK_BROWSER=y
+#BR2_PACKAGE_QT5=y
+#BR2_PACKAGE_QT5BASE_OPENGL_ES2=y
+#BR2_PACKAGE_QT5BASE_LINUXFB=y
+#BR2_PACKAGE_QT5BASE_XCB=y
+#BR2_PACKAGE_QT5BASE_EGLFS=y
+#BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
+#BR2_PACKAGE_QT5BASE_GIF=y
+#BR2_PACKAGE_QT5LOCATION=y
+#BR2_PACKAGE_QT5MULTIMEDIA=y
+#BR2_PACKAGE_QT5DECLARATIVE=y
+#BR2_PACKAGE_QT_WEBKIT_KIOSK=y
