--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -50,6 +50,7 @@ BR2_PACKAGE_F2FS_TOOLS=y
 BR2_PACKAGE_NTFS_3G=y
 BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_LIBERATION=y
+BR2_PACKAGE_LIBDRM=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_LLVM=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST=y
