--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -75,6 +75,8 @@ BR2_PACKAGE_NODM=y
 BR2_PACKAGE_XDOTOOL=y
 BR2_PACKAGE_OPENBOX=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
+BR2_PACKAGE_LINUX_FIRMWARE_COMPRESS=y
+BR2_PACKAGE_LINUX_FIRMWARE_COMPRESS_ZSTD=y
 BR2_PACKAGE_ACPID=y
 BR2_PACKAGE_EUDEV_RULES_GEN=y
 BR2_PACKAGE_USBMOUNT=y
