--- a/buildroot-external/kernel/6.6/global.config
+++ b/buildroot-external/kernel/6.6/global.config
@@ -366,3 +366,7 @@ CONFIG_ACPI_APEI_GHES=y
 # disable virtio support
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VIRTIO_CONSOLE is not set
+
+# enable firmware compression
+CONFIG_FW_LOADER_COMPRESS=y
+CONFIG_FW_LOADER_COMPRESS_ZSTD=y
