fix all kernel 6.12 Kconfig dependencies

--- a/buildroot-external/kernel/6.12/global.config
+++ b/buildroot-external/kernel/6.12/global.config
@@ -30,7 +30,6 @@ CONFIG_MOUSE_PS2_LOGIPS2PP=y
 CONFIG_MOUSE_PS2_SYNAPTICS=y
 CONFIG_MOUSE_PS2_SYNAPTICS_SMBUS=y
 CONFIG_MOUSE_PS2_CYPRESS=y
-CONFIG_MOUSE_PS2_LIFEBOOK=y
 CONFIG_MOUSE_PS2_TRACKPOINT=y
 CONFIG_MOUSE_PS2_ELANTECH=y
 CONFIG_MOUSE_PS2_ELANTECH_SMBUS=y
@@ -97,6 +96,7 @@ CONFIG_SND_HDA_EXT_CORE=m
 CONFIG_SND_HDA_PREALLOC_SIZE=0
 CONFIG_SND_USB=y
 CONFIG_SND_USB_AUDIO=m
+CONFIG_SND_SOC_HDA=m
 
 # disable speakup support
 # CONFIG_SPEAKUP is not set
@@ -194,6 +194,9 @@ CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_TMPFS_XATTR=y
 # CONFIG_CEPH_FS is not set
+# CONFIG_XFS_FS is not set
+# CONFIG_GFS2_FS is not set
+# CONFIG_OCFS2_FS is not set
 
 # partition support
 CONFIG_PARTITION_ADVANCED=y
@@ -204,6 +207,10 @@ CONFIG_MSDOS_PARTITION=y
 
 # disable quota support
 # CONFIG_QUOTA is not set
+# CONFIG_QUOTACTL is not set
+# CONFIG_QFMT_V1 is not set
+# CONFIG_QFMT_V2 is not set
+# CONFIG_NETFILTER_XT_MATCH_QUOTA is not set
 
 # enable ata support
 CONFIG_ATA=y
@@ -282,9 +289,9 @@ CONFIG_CFG80211_WEXT=y
 # CONFIG_VLAN_8021Q_GVRP is not set
 # CONFIG_VLAN_8021Q_MVRP is not set
 
-# disable ip/udp tunnels
-# CONFIG_NET_IP_TUNNEL is not set
-# CONFIG_NET_UDP_TUNNEL is not set
+# enable ip/udp tunnels
+CONFIG_NET_IP_TUNNEL=m
+CONFIG_NET_UDP_TUNNEL=m
 
 # disable wireguard support
 # CONFIG_WIREGUARD is not set
@@ -333,7 +340,8 @@ CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 
 # set some ACPI options
-CONFIG_ACPI_BATTERY=y
+CONFIG_ACPI=y
+# CONFIG_ACPI_BATTERY is not set
 # CONFIG_ACPI_SLEEP is not set
 CONFIG_ACPI_APEI=y
 CONFIG_ACPI_APEI_GHES=y
@@ -349,18 +357,20 @@ CONFIG_ACPI_APEI_GHES=y
 # CONFIG_CGROUP_MISC is not set
 # CONFIG_CGROUP_DEBUG is not set
 # CONFIG_SOCK_CGROUP_DATA is not set
+# CONFIG_SCHED_AUTOGROUP is not set
 
 # disable some debugging to safe space
 # CONFIG_KALLSYMS_ALL is not set
 # CONFIG_PM_DEBUG is not set
 # CONFIG_KPROBES is not set
 # CONFIG_NET_9P is not set
+# CONFIG_KGDB is not set
+# CONFIG_LATENCYTOP is not set
 
 # disable unnecessary stuff
 # CONFIG_EFI_MIXED is not set
 # CONFIG_SUSPEND is not set
 # CONFIG_MEDIA_CEC_SUPPORT is not set
-# CONFIG_HYPERVISOR_GUEST is not set
 # CONFIG_HIBERNATION is not set
 
 # disable virtio support
