--- a/buildroot-external/board/generic-x86_64/kernel.config
+++ b/buildroot-external/board/generic-x86_64/kernel.config
@@ -36,6 +36,7 @@ CONFIG_X86_INTEL_LPSS=y
 CONFIG_MISC_RTSX_PCI=m
 CONFIG_MISC_RTSX_USB=m
 
+CONFIG_SND_HDA_COMPONENT=y
 CONFIG_SND_HDA_INTEL=m
 CONFIG_SND_HDA_I915=y
 CONFIG_SND_HDA_INTEL_HDMI_SILENT_STREAM=y
@@ -179,3 +180,70 @@ CONFIG_DVB_CORE=m
 # CONFIG_DVB_NET is not set
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=m
+
+# set some ACPI options
+CONFIG_ACPI_BATTERY=y
+
+# enable input MOUSEDEV
+CONFIG_MOUSE_PS2_LIFEBOOK=y
+
+# DRM options
+CONFIG_DRM_TTM=y
+CONFIG_DRM_BUDDY=y
+
+# enable DESIGNWARE I2C/PCI support for touchpads and other
+CONFIG_I2C_DESIGNWARE_CORE=y
+CONFIG_I2C_DESIGNWARE_SLAVE=y
+CONFIG_I2C_DESIGNWARE_PLATFORM=y
+CONFIG_I2C_DESIGNWARE_BAYTRAIL=y
+CONFIG_I2C_DESIGNWARE_PCI=y
+
+# enable special multifunction device drivers
+CONFIG_MFD_INTEL_LPSS=m
+CONFIG_MFD_INTEL_LPSS_ACPI=m
+CONFIG_MFD_INTEL_LPSS_PCI=m
+
+# enable Synaptics RMI4 bus support
+CONFIG_RMI4_CORE=m
+CONFIG_RMI4_I2C=m
+CONFIG_RMI4_SPI=m
+CONFIG_RMI4_SMB=m
+CONFIG_RMI4_F03=y
+CONFIG_RMI4_F03_SERIO=m
+CONFIG_RMI4_2D_SENSOR=y
+CONFIG_RMI4_F11=y
+CONFIG_RMI4_F12=y
+CONFIG_RMI4_F30=y
+CONFIG_RMI4_F34=y
+CONFIG_RMI4_F3A=y
+# CONFIG_RMI4_F54 is not set
+CONFIG_RMI4_F55=y
+
+# enable special support for Thinkpad systems/laptops
+CONFIG_THINKPAD_ACPI=m
+# CONFIG_THINKPAD_ACPI_DEBUGFACILITIES is not set
+# CONFIG_THINKPAD_ACPI_DEBUG is not set
+# CONFIG_THINKPAD_ACPI_UNSAFE_LEDS is not set
+CONFIG_THINKPAD_ACPI_VIDEO=y
+CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
+CONFIG_THINKPAD_LMI=m
+
+# enable special support for DELL systems/laptops
+CONFIG_X86_PLATFORM_DRIVERS_DELL=y
+CONFIG_DELL_LAPTOP=m
+# CONFIG_DELL_RBU is not set
+CONFIG_DELL_RBTN=m
+CONFIG_DELL_SMBIOS=m
+CONFIG_DELL_SMBIOS_WMI=y
+CONFIG_DELL_SMBIOS_SMM=y
+CONFIG_DELL_SMO8800=m
+CONFIG_DELL_WMI=m
+CONFIG_DELL_WMI_PRIVACY=y
+CONFIG_DELL_WMI_AIO=m
+CONFIG_DELL_WMI_DESCRIPTOR=m
+CONFIG_DELL_WMI_DDV=m
+CONFIG_DELL_WMI_LED=m
+CONFIG_DELL_WMI_SYSMAN=m
+
+# disable unnecessary stuff
+# CONFIG_HYPERVISOR_GUEST is not set
