--- a/buildroot-external/kernel/6.12/device-support.config
+++ b/buildroot-external/kernel/6.12/device-support.config
@@ -82,7 +82,7 @@ CONFIG_RT2800USB_UNKNOWN=y
 
 # enable Multimedia core support
 CONFIG_MEDIA_SUPPORT=y
-CONFIG_MEDIA_TUNER=m
+CONFIG_MEDIA_TUNER=y
 
 # enable GPIO support
 CONFIG_GPIOLIB=y
@@ -106,57 +106,3 @@ CONFIG_I2C_HID=m
 CONFIG_I2C_HID_ACPI=m
 CONFIG_I2C_HID_OF=m
 CONFIG_I2C_HID_CORE=m
-
-# enable DESIGNWARE I2C/PCI support for touchpads and other
-CONFIG_I2C_DESIGNWARE_CORE=y
-CONFIG_I2C_DESIGNWARE_SLAVE=y
-CONFIG_I2C_DESIGNWARE_PLATFORM=y
-CONFIG_I2C_DESIGNWARE_BAYTRAIL=y
-CONFIG_I2C_DESIGNWARE_PCI=y
-
-# enable special multifunction device drivers
-CONFIG_MFD_INTEL_LPSS=m
-CONFIG_MFD_INTEL_LPSS_ACPI=m
-CONFIG_MFD_INTEL_LPSS_PCI=m
-
-# enable Synaptics RMI4 bus support
-CONFIG_RMI4_CORE=m
-CONFIG_RMI4_I2C=m
-CONFIG_RMI4_SPI=m
-CONFIG_RMI4_SMB=m
-CONFIG_RMI4_F03=y
-CONFIG_RMI4_F03_SERIO=m
-CONFIG_RMI4_2D_SENSOR=y
-CONFIG_RMI4_F11=y
-CONFIG_RMI4_F12=y
-CONFIG_RMI4_F30=y
-CONFIG_RMI4_F34=y
-CONFIG_RMI4_F3A=y
-# CONFIG_RMI4_F54 is not set
-CONFIG_RMI4_F55=y
-
-# enable special support for Thinkpad systems/laptops
-CONFIG_THINKPAD_ACPI=m
-# CONFIG_THINKPAD_ACPI_DEBUGFACILITIES is not set
-# CONFIG_THINKPAD_ACPI_DEBUG is not set
-# CONFIG_THINKPAD_ACPI_UNSAFE_LEDS is not set
-CONFIG_THINKPAD_ACPI_VIDEO=y
-CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
-CONFIG_THINKPAD_LMI=m
-
-# enable special support for DELL systems/laptops
-CONFIG_X86_PLATFORM_DRIVERS_DELL=y
-CONFIG_DELL_LAPTOP=m
-# CONFIG_DELL_RBU is not set
-CONFIG_DELL_RBTN=m
-CONFIG_DELL_SMBIOS=m
-CONFIG_DELL_SMBIOS_WMI=y
-CONFIG_DELL_SMBIOS_SMM=y
-CONFIG_DELL_SMO8800=m
-CONFIG_DELL_WMI=m
-CONFIG_DELL_WMI_PRIVACY=y
-CONFIG_DELL_WMI_AIO=m
-CONFIG_DELL_WMI_DESCRIPTOR=m
-CONFIG_DELL_WMI_DDV=m
-CONFIG_DELL_WMI_LED=m
-CONFIG_DELL_WMI_SYSMAN=m
