specify allowinterfaces for dhcpcd.conf and make sure to use usbXX net interface names.

--- a/buildroot-external/rootfs-overlay/etc/dhcpcd.conf
+++ b/buildroot-external/rootfs-overlay/etc/dhcpcd.conf
@@ -54,3 +54,6 @@ env hostname_fqdn=false
 
 # setup NTP to use chrony
 env NTP_CONF=/etc/chrony.conf
+
+# allow specific interfaces (eth*, wlan*) only
+allowinterfaces eth* wlan*
