add RaspberryPi3 to release template and fix release workflow SHA checksum check.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -240,7 +240,7 @@ jobs:
         run: |
           for f in */*.mf; do
             while read -r line; do
-              NEEDLE=$(echo "${line}" | awk '{print $3}' | sed 's/.*-\(.*\..*\)$/\1/')
+              NEEDLE=$(echo "${line}" | awk '{print $3}' | cut -d'-' -f3-)
               SHACKS=$(echo "${line}" | awk '{print $2}')
               sed -i "s/XSHA${NEEDLE}X/${SHACKS}/" release-template.md/release-template.md
             done < <(cat ${f})
