enable basic RaspberryPi4 build environment support.

--- a/buildroot-external/board/rpi4/genimage.cfg
+++ b/buildroot-external/board/rpi4/genimage.cfg
@@ -10,7 +10,7 @@ image boot.vfat {
       "cmdline.txt",
       "config.txt",
       "bootEnv.txt",
-      "rpi-firmware/overlays",
+      "overlays",
       "rpi-eeprom/pieeprom.upd",
       "rpi-eeprom/pieeprom.sig",
       "u-boot.bin",
