re-add ASUS Tinkerboard image support.

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [generic-x86_64, rpi3, rpi4, rpi5]
+        platform: [generic-x86_64, rpi3, rpi4, rpi5, tinkerboard]
 
     steps:
       - name: Checkout Code
