--- a/buildroot-external/board/tinkerboard/genimage.cfg
+++ b/buildroot-external/board/tinkerboard/genimage.cfg
@@ -4,7 +4,7 @@ image boot.vfat {
 
     files = {
       "VERSION",
-      "cmdline.txt"
+      "cmdline.txt",
       "rk3288-tinker.dtb",
       "rk3288-tinker-s.dtb",
       "boot.scr",
