change U-Boot prompt to ThinRoot

--- a/buildroot-external/bootloader/uboot.config
+++ b/buildroot-external/bootloader/uboot.config
@@ -4,7 +4,7 @@ CONFIG_EXPERT=y
 # CONFIG_DISPLAY_CPUINFO is not set
 # CONFIG_DISPLAY_BOARDINFO is not set
 CONFIG_BOOTDELAY=-2
-CONFIG_SYS_PROMPT="RM> "
+CONFIG_SYS_PROMPT="ThinRoot> "
 CONFIG_DOS_PARTITION=y
 # CONFIG_ISO_PARTITION is not set
 # CONFIG_EFI_PARTITION is not set
