--- a/buildroot-external/Buildroot.config
+++ b/buildroot-external/Buildroot.config
@@ -95,6 +95,7 @@ BR2_PACKAGE_IRQBALANCE=y
 BR2_PACKAGE_TAR=y
 BR2_PACKAGE_UTIL_LINUX_RFKILL=y
 BR2_PACKAGE_PCSC_LITE=y
+# BR2_PACKAGE_URANDOM_SCRIPTS is not set
 BR2_TARGET_ROOTFS_CPIO=y
 BR2_TARGET_ROOTFS_CPIO_LZ4=y
 # BR2_TARGET_ROOTFS_TAR is not set
