dsiable udhcpc because we have dhcpcd installed already.

--- a/buildroot-external/Busybox.config
+++ b/buildroot-external/Busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.36.1
-# Thu Jan 16 11:55:53 2025
+# Tue Feb  4 14:35:58 2025
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -1012,26 +1012,22 @@ CONFIG_VCONFIG=y
 CONFIG_DHCPD_LEASES_FILE=""
 # CONFIG_DUMPLEASES is not set
 # CONFIG_DHCPRELAY is not set
-CONFIG_UDHCPC=y
-CONFIG_FEATURE_UDHCPC_ARPING=y
-CONFIG_FEATURE_UDHCPC_SANITIZEOPT=y
-CONFIG_UDHCPC_DEFAULT_SCRIPT="/usr/share/udhcpc/default.script"
-CONFIG_UDHCPC6_DEFAULT_SCRIPT="/usr/share/udhcpc/default6.script"
-CONFIG_UDHCPC6=y
-CONFIG_FEATURE_UDHCPC6_RFC3646=y
-CONFIG_FEATURE_UDHCPC6_RFC4704=y
-CONFIG_FEATURE_UDHCPC6_RFC4833=y
-CONFIG_FEATURE_UDHCPC6_RFC5970=y
-
-#
-# Common options for DHCP applets
-#
-CONFIG_UDHCPC_DEFAULT_INTERFACE="eth0"
+# CONFIG_UDHCPC is not set
+# CONFIG_FEATURE_UDHCPC_ARPING is not set
+# CONFIG_FEATURE_UDHCPC_SANITIZEOPT is not set
+CONFIG_UDHCPC_DEFAULT_SCRIPT=""
+CONFIG_UDHCPC6_DEFAULT_SCRIPT=""
+# CONFIG_UDHCPC6 is not set
+# CONFIG_FEATURE_UDHCPC6_RFC3646 is not set
+# CONFIG_FEATURE_UDHCPC6_RFC4704 is not set
+# CONFIG_FEATURE_UDHCPC6_RFC4833 is not set
+# CONFIG_FEATURE_UDHCPC6_RFC5970 is not set
+CONFIG_UDHCPC_DEFAULT_INTERFACE=""
 # CONFIG_FEATURE_UDHCP_PORT is not set
 CONFIG_UDHCP_DEBUG=0
-CONFIG_UDHCPC_SLACK_FOR_BUGGY_SERVERS=80
+CONFIG_UDHCPC_SLACK_FOR_BUGGY_SERVERS=0
 # CONFIG_FEATURE_UDHCP_RFC3397 is not set
-CONFIG_FEATURE_UDHCP_8021Q=y
+# CONFIG_FEATURE_UDHCP_8021Q is not set
 CONFIG_IFUPDOWN_UDHCPC_CMD_OPTIONS="-R -n"
 
 #
