disable CONFIG_FB_SIMPLE and rely solely on a DRM framebuffer

--- a/buildroot-external/board/rpi3/kernel.config
+++ b/buildroot-external/board/rpi3/kernel.config
@@ -7,6 +7,9 @@
 # disable touchscreen
 # CONFIG_REGULATOR_RASPBERRYPI_TOUCHSCREEN_ATTINY is not set
 
+# disable simple framebuffer support
+# CONFIG_FB_SIMPLE is not set
+
 # enable mmc support
 CONFIG_MMC_BCM2835=y
 
