--- a/buildroot-external/board/generic-x86_64/kernel.config
+++ b/buildroot-external/board/generic-x86_64/kernel.config
@@ -19,6 +19,9 @@ CONFIG_SYSFB=y
 CONFIG_FB=y
 CONFIG_FB_EFI=y
 
+# disable simple framebuffer support
+# CONFIG_FB_SIMPLE is not set
+
 CONFIG_DRM_I915=y
 CONFIG_DRM_I915_CAPTURE_ERROR=y
 CONFIG_DRM_I915_COMPRESS_ERROR=y
