--- a/buildroot-external/board/tinkerboard/kernel.config
+++ b/buildroot-external/board/tinkerboard/kernel.config
@@ -6,6 +6,9 @@ CONFIG_MFD_RK8XX_I2C=y
 CONFIG_DW_DMAC_CORE=m
 CONFIG_DW_DMAC=m
 
+# disable simple framebuffer support
+# CONFIG_FB_SIMPLE is not set
+
 # CONFIG_WERROR is not set
 CONFIG_DRM=y
 CONFIG_DRM_ROCKCHIP=y
