enable CONFIG_DRM_SIMPLEDRM to get framebuffer working again for Pi3

--- a/buildroot-external/board/rpi3/kernel.config
+++ b/buildroot-external/board/rpi3/kernel.config
@@ -25,7 +25,7 @@ CONFIG_SERIAL_AMBA_PL011=m
 CONFIG_DRM=y
 CONFIG_DRM_V3D=y
 CONFIG_DRM_VC4=y
-# CONFIG_DRM_SIMPLEDRM is not set
+CONFIG_DRM_SIMPLEDRM=y
 
 # enable SND
 CONFIG_SOUND=y
